--- a/文件流/this指针.vcxproj
+++ b/文件流/this指针.vcxproj
@@ -116,13 +116,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Downloads\main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <Image Include="..\..\..\Desktop\子弹头电子系列\SZDT-802.jpg" />
     <Image Include="..\..\..\Desktop\子弹头电子系列\SZDT-803.jpg" />
     <Image Include="..\..\..\Desktop\子弹头电子系列\SZDT-804.jpg" />
     <Image Include="..\..\..\Desktop\子弹头电子系列\SZDT-807.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
