--- a/文件流/this指针.vcxproj.filters
+++ b/文件流/this指针.vcxproj.filters
@@ -15,11 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Downloads\main.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <Image Include="..\..\..\Desktop\子弹头电子系列\SZDT-802.jpg">
       <Filter>资源文件</Filter>
     </Image>
@@ -32,5 +27,10 @@
     <Image Include="..\..\..\Desktop\子弹头电子系列\SZDT-807.jpg">
       <Filter>资源文件</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
